@@ -1,0 +1,23 @@
+<?php
+
+/**
+ * Aliases for the special pages of the Live Translate extension.
+ *
+ * @file LiveTranslate.i18n.alias.php
+ * @ingroup LiveTranslate
+ *
+ * @licence GNU GPL v3+
+ * @author Jeroen De Dauw < jeroendedauw@gmail.com >
+ */
+
+$specialPageAliases = array();
+
+/** English (English) */
+$specialPageAliases['en'] = array(
+	'LiveTranslate' => array( 'LiveTranslate' ),
+);
+
+/**
+ * For backwards compatibility with MediaWiki 1.15 and earlier.
+ */
+$aliases =& $specialPageAliases;
